--- a/数学/数论/中国剩余定理.md
+++ b/数学/数论/中国剩余定理.md
@@ -1,17 +1,90 @@
 # 中国剩余定理
 [toc]
-
-## 问题概述
-- 求解如下形式的一元线性同余方程组（其中$n_1,n_2...n_k$两两互质）
+## 中国剩余定理
+- 求解如下形式的一元线性同余方程组（其中$m_1,m_2...m_n$两两互质）
 $$\begin{cases}
-    x \equiv a_1\pmod {n_1} \\
-    x \equiv a_2\pmod {n_2} \\
+    x \equiv a_1\pmod {m_1} \\
+    x \equiv a_2\pmod {m_2} \\
     \vdots\\
-    x \equiv a_k\pmod {n_k}
+    x \equiv a_n\pmod {m_n}
 \end{cases}$$
+- 令：$$M=\prod_{i=1}^{n}m_i,\, M_i=\frac{M}{m_i}$$
+- 利用**扩展欧几里得/费马小定理/欧拉定理**我们可以得到$M_i$关于模$m_i$的逆元$M_i^{-1}$：$$M_i^{-1}M_i\equiv 1\pmod{m_i}$$
+- 令：$C_i = M_i*M_i^{-1}$**(不对$m_i$取模)**
+- 由此得到通解：$$x=kM+\sum_{i=1}^{n}a_iC_i, k\in Z$$
+- **证明：** 
+  - $i\neq j$时，有$m_i|M_j$，故$m_i|C_j$
+  - 则$x\equiv \sum_{k=1}^{n}a_kC_k\equiv a_iC_i \pmod {m_i}$
+  - 而$C_i\equiv 1\pmod m_i$，故上述构造合法
+- 代码:
+  ```c++
+  long long crt()
+  {
+      long long ans = 0, M = 1;
+      for (int i = 0; i < n; i++)
+          M *= m[i];
 
-### 中国剩余定理
-### 简介
-- > 有物不知其数，三三数之剩二，五五数之剩三，七七数之剩二。问物几何？-- 《孙子算经》
-- 该问题最早见于《孙子算经》中，即求满足以下条件的整数：除以$3$余$2$，除以$5$余$3$，除以$7$余$2$。
-### 原理
+      for (int i = 0; i < n; i++)
+      {
+          long long x = 0, y = 0, Mi = M / m[i];
+          exgcd(Mi, m[i], x, y);
+          ans += a[i] * Mi * ((x % m[i] + m[i]) % m[i]); //注意取正数
+      }
+      return ans % M;
+  }
+  ```
+- 应用
+  - [P1495 【模板】中国剩余定理(CRT)/曹冲养猪](https://www.luogu.com.cn/problem/P1495)
+  - [【SDOI2010】古代猪文](https://www.luogu.com.cn/problem/P2480)
+
+## 扩展中国剩余定理
+- 模数**不互质**的情况
+- 设两个方程
+  $$\begin{cases}
+    x \equiv a_1\pmod {m_1} \\
+    x \equiv a_2\pmod {m_2}
+  \end{cases}$$
+- **定理**：若有特解$x^*$，则这组方程组的通解是$x^*+k\times lcm(m1,m2)$
+  - $\begin{cases}
+      x \equiv a_1\pmod {m_1} \\
+      x \equiv a_2\pmod {m_2}
+    \end{cases}$，$\begin{cases}
+    y \equiv a_1\pmod {m_1} \\
+    y \equiv a_2\pmod {m_2}
+    \end{cases}$
+  - **证明**解唯一，即需要得出$x=y$：
+  - $\begin{cases}
+    x-y \equiv 0\pmod {m_1} \\
+    x-y \equiv 0\pmod {m_2}
+    \end{cases}$ $\Rightarrow lcm(m1,m2)|(x-y)$
+  - 由于$x-y$必须被$lcm(m1,m2)$整除，所以当$0\le x,y\le lcm(m1,m2)$时，$x=y$
+
+- 可得$x=m_1p+a_1=m_2q+a_2$，则有$m_1p+m_2(-q)=a_2-a_1$
+- 由**裴蜀定理**可知有解时当且仅当 $gcd(m_1, m_2)|(a_2-a_1)$，于是我们用**扩展欧几里得**得到一组解$(p, q)$
+- 根据之前的定理和特解$p$，我们可以将这两个方程合并成一个
+  $$x\equiv(m_1p+a_1)\pmod {lcm(m_1,m_2)}$$
+- **多个方程**时只要用这个方法两两合并即可
+- 代码:
+  ```c++
+  LL excrt()
+  {
+      LL lcm = m[0], ans = a[0]; //第一个方程的解特判
+      for (int i = 1; i < n; i++)
+      {
+          LL p, q;
+          LL g = exgcd(lcm, m[i], p, q);
+          LL t = a[i] - ans;
+
+          if (t % g)
+              return -1; //判断是否无解
+
+          ans += p * (t / g) * lcm; //更新前k个方程组的答案, 如果溢出手写乘法或者用int128
+          lcm *= m[i] / g;
+          ans %= lcm;
+      }
+      return (ans % lcm + lcm) % lcm;
+  }
+  ```
+- 应用：
+  - [P4777 【模板】扩展中国剩余定理（EXCRT）](https://www.luogu.com.cn/problem/solution/P4777)
+  - [【NOI2018】屠龙勇士](https://uoj.ac/problem/396)
