--- a/数学/数论/中国剩余定理.md
+++ b/数学/数论/中国剩余定理.md
@@ -66,6 +66,7 @@ $$\begin{cases}
 - **多个方程**时只要用这个方法两两合并即可
 - 代码:
   ```c++
+  using LL = long long;
   LL excrt()
   {
       LL lcm = m[0], ans = a[0]; //第一个方程的解特判
