--- a/数学/多项式/拉格朗日插值.md
+++ b/数学/多项式/拉格朗日插值.md
@@ -1,28 +1,67 @@
 # 拉格朗日插值
 [toc]
-## 问题概述
-- 众所周知，平面上 $n$ 个点可以确定一个 $n-1$ 次多项式 $f(x)$。现在已知 $n$ 个点 $(x_i,y_i)$，请确定经过这 $n$ 个点的多项式 $f(x)$ 在 $x=k$ 时的值。
-- 多项式$f(x)=\sum_{i=0}^{n-1}a_ix^i$
-
-## 其他解决方法
-- **差分法**
-  - 适用于$x_i=i$的情况
-- **待定系数法**
-  - 将题目给的$n$个$x_i$都分别带入式子后，就可以得到一个$n*n$的方程组矩阵，然后使用**高斯消元**可以得到多项式的系数向量
-  - 复杂度$O(n^3)$
-### 拉格朗日插值
-#### 简介
-- 在数值分析中，拉格朗日插值法是以法国18世纪数学家约瑟夫·拉格朗日命名的一种多项式插值方法。如果对实践中的某个物理量进行观测，在若干个不同的地方得到相应的观测值，拉格朗日插值法可以找到一个多项式，其恰好在各个观测的点取到观测到的值。上面这样的多项式就称为拉格朗日（插值）多项式。
-#### 原理
+## 拉格朗日插值
+- 平面上 $n$ 个点可以确定一个 $n-1$ 次多项式 $f(x)=\sum_{i=0}^{n-1}a_ix^i$。
+- 现在已知 $n$ 个点 $(x_i,y_i)$，请确定经过这 $n$ 个点的多项式 $f(x)$ 在 $x=k$ 时的值。
+## 原理
 - 因为$f(x)-f(a) = \sum_{i=0}^{n-1}a_i(x^i-a^i)=(x-a)*\sum_{i=1}^{n-1}a_i(x^i-a^i)$，所以：
   $$f(x)\equiv f(a)\pmod {(x-a)}$$
 - $n$个$x_i$都分别带入式子后得到一个关于$f(x)$的$n$维的多项式线性同余方程组
-  $$f(x)\equiv f(x_i)\pmod {(x-x_i)}$$
+    $$\begin{cases}  
+    \vdots \\
+    f(x)\equiv f(x_i)\pmod {(x-x_i)} \\
+    \vdots
+  \end{cases}$$
 - 根据**中国剩余定理**
   $$M=\prod_{i=1}^{n}(x-x_i),m_i=\frac{M}{x-x_i}=\prod_{j\neq i}(x-x_j)$$
+- $m_i$模$(x-x_i)$意义下的逆是
+  $$m_i^{-1}=\prod_{j\neq i}\frac{1}{x_i-x_j}$$
+- 得到模意义下唯一的$f(x)$
+  $$f(x)\equiv \sum_{i=1}^{n}f(x_i)m_im_i^{-1} \equiv \sum_{i=1}^{n}f(x_i)\prod_{j\neq i}\frac{x-x_j}{x_i-x_j} \pmod M$$
+- 求得$f(k)$的复杂度为$O(n^2)$
 
-#### 代码实现
+## 代码实现
+```c++
+LL M = 998244353;
 
+LL powmod(LL x, LL n)
+{
+    LL ret = 1LL;
+    while (n)
+    {
+        if (n & 1)
+            ret = ret * x % M;
+        x = x * x % M;
+        n >>= 1;
+    }
+    return ret;
+}
 
+LL inv(LL x) { return powmod(x, M - 2); }
+
+LL Lagrange(int n, LL k)
+{
+    LL ans = 0;
+    for (int i = 1; i <= n; i++)
+    {
+        LL s1 = 1, s2 = 1;
+        for (int j = 1; j <= n; j++)
+            if (i != j)
+            {
+                s1 = s1 * (k - x[j]) % M;
+                s2 = s2 * (x[i] - x[j]) % M;
+            }
+        ans = (ans + y[i] * s1 % M * inv(s2) % M) % M;
+    }
+    return (ans % M + M) % M;
+}
+```
+## 其他解决方法
+- **差分法**
+  - 适用于$x_i=i$的情况，略
+- **待定系数法**
+  - 将题目给的$n$个$x_i$都分别带入式子后，就可以得到一个$n*n$的方程组矩阵，然后使用**高斯消元**可以得到多项式的系数向量
+  - 复杂度$O(n^3)$
+- 在$x$取值**连续**时可以通过预处理优化到$O(n)$，略
 ## 例题
 [P4781 【模板】拉格朗日插值](https://www.luogu.com.cn/problem/P4781)
