--- a/数学/数论/扩展欧几里得.md
+++ b/数学/数论/扩展欧几里得.md
@@ -1,9 +1,10 @@
 # 扩展欧几里得
-[toc]
 
 ## 欧几里得算法
 - **求解最大公约数**$g=gcd(n,m)$
-- 已知$g|n, g|m$，而$n \bmod m=n-m\lfloor\frac{n}{m}\rfloor$，可得 $g|(n\bmod m)$
+- 当存在$d|n, d|m$，而$r = n \bmod m=n-m\lfloor\frac{n}{m}\rfloor$，可得 $d|r$
+- 反之存在$d|m, d|r$时，而$n = m * x + r$，可得 $d|n$
+- 所以(n, m)和(m, n mod m)的公因数集合相同
 - 进而可知 $g=gcd(m, n\bmod m)$
 - 代码：
   ```c++
@@ -45,14 +46,3 @@
 - 求解$ax\equiv b\pmod c$
 - **等价于**$ax + by = m,\, st.\,gcd(a, b) | m$
 - 利用**扩展欧几里得**得到一组特解$(x_0, y_0)$，那么对于这个方程的通解可以表示为$$(x_0+k\frac{b}{gcd(a,b)}, y_0-k\frac{a}{gcd(a,b)}), k\in Z$$
-- 代码:
-    ```c++
-    bool liEu(int a, int b, int c, int& x, int& y)
-    {
-        int d = exgcd(a, b, x, y);
-        if (c % d != 0) return false;
-        int k = c / d;
-        x *= k, y *= k;
-        return true;
-    }
-    ```
